# django-shopman

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BRIDGE-PLAN.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION-PLAN.md  CORRECTIONS-PLAN.md  DECOUPLING-PLAN.md  Dockerfile  HARDENING-PLAN.md  Makefile  PARITY-PLAN.md  PRODUCTION-PLAN.md  READINESS-PLAN-v2.md  READINESS-PLAN.md  README.md  REFACTOR-PLAN.md  RESTRUCTURE-PLAN.md  STOREFRONT-PLAN.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
framework/: .env.example  package.json  pyproject.toml
framework/project/: settings.py  urls.py
framework/shopman/: __init__.py  apps.py  checks.py  colors.py  config.py  confirmation.py  context_processors.py  directives.py  fiscal.py  flows.py  kds_utils.py  lifecycle.py  middleware.py  modifiers.py  notifications.py  production_flows.py  production_lifecycle.py  protocols.py  setup.py  topics.py
framework/shopman/adapters/: __init__.py  catalog.py  customer.py  notification_email.py  notification_manychat.py  payment_efi.py  payment_mock.py  payment_stripe.py  pricing.py  production.py  stock.py  stock_internal.py
framework/shopman/admin/: __init__.py  cash_register.py  channel.py  channel_config.py  dashboard.py  orders.py  rules.py  shop.py  widgets.py
framework/shopman/api/: account.py  availability.py  catalog.py  serializers.py  tracking.py  urls.py  views.py
framework/shopman/backends/: accounting_contaazul.py  accounting_mock.py  checkout_defaults.py  cost.py  customer.py  fiscal_mock.py  notification_email.py  notification_sms.py  payment_efi.py  stock.py
framework/shopman/handlers/: __init__.py  _stock_receivers.py  accounting.py  checkout_defaults.py  confirmation.py  customer.py  fiscal.py  fulfillment.py  kds_dispatch.py  loyalty.py  notification.py  pricing.py  returns.py  stock.py  stock_alerts.py
framework/shopman/migrations/: 0001_initial.py  0002_alter_shop_border_radius_alter_shop_heading_font_and_more.py  0004_deliveryzone.py  0005_cash_register.py  0006_sync_alert_types.py  0007_add_channel_config_record_and_shop_integrations.py
framework/shopman/models/: __init__.py  _channel_config.py  alerts.py  cash_register.py  channel.py  delivery.py  kds.py  rules.py  shop.py
framework/shopman/rules/: engine.py  validation.py
framework/shopman/services/: alternatives.py  availability.py  cancellation.py  checkout.py  checkout_defaults.py  customer.py  fiscal.py  fulfillment.py  kds.py  loyalty.py  notification.py  order_helpers.py  payment.py  pickup_slots.py  pricing.py  production.py  stock.py
framework/shopman/templatetags/: storefront_tags.py
framework/shopman/tests/: test_adapters.py  test_admin.py  test_cart_alternatives.py  test_channel_config_conformance.py  test_checkout_defaults.py  test_checkout_error_paths.py  test_concurrent_checkout.py  test_conformance.py  test_delivery_zones.py  test_discount_modifier.py  test_discount_transparency.py  test_flow_s6.py  test_flows.py  test_guestman_order_history.py  test_happy_hour_badge.py  test_hold_adoption.py  test_hold_adoption_integration.py  test_invariant_handlers.py  test_invariant_no_legacy_flow.py  test_invariant_payment_data.py  test_invariants.py  test_lifecycle.py  test_loyalty_checkout.py  test_mark_paid.py  test_no_deep_kernel_imports.py  test_order_lifecycle_e2e.py  test_payment_webhooks.py  test_pedido_confirm.py  test_phone_normalization.py  test_pickup_slots.py  test_pos_cancel.py  test_pos_cash_register.py  test_pos_d1_employee.py  test_pos_discount_notes.py  test_pos_keyboard.py  test_pos_layout.py  test_pos_shift_summary.py  test_production_flows.py  test_production_lifecycle.py  test_rate_limiting.py  (+8 more)
framework/shopman/web/: cart.py  constants.py  urls.py
framework/shopman/webhooks/: efi.py  stripe.py  urls.py
framework/static/src/: input.css  style-v2.css
shopman-app/: package-lock.json  package.json  pyproject.toml  tailwind.config.js
shopman-app/channels/: apps.py  config.py  confirmation.py  hooks.py  notifications.py  presets.py  setup.py  topics.py  webhook_urls.py  webhooks.py
shopman-app/channels/api/: account.py  catalog.py  serializers.py  tracking.py  urls.py  views.py
shopman-app/channels/backends/: customer.py  notification_console.py  notification_email.py  notification_manychat.py  notification_sms.py  notification_webhook.py  notification_whatsapp.py  payment_efi.py  payment_mock.py  pricing.py  (+1 more)
shopman-app/nelson/: apps.py  modifiers.py  validators.py
shopman-app/project/: settings.py  urls.py  wsgi.py
shopman-app/scripts/: download-fonts.sh
shopman-app/shop/: admin.py  apps.py  colors.py  context_processors.py  dashboard.py  fonts.py  models.py  modifiers.py  validators.py  widgets.py
shopman-app/shopman/: apps.py  channels.py  config.py  fonts.py  middleware.py  modifiers.py  orchestration.py  oxbow_tokens.py  presets.py
shopman-app/tests/: test_accounting_contrib.py  test_admin_parity.py  test_bundle_fulfillment.py  test_cart_api.py  test_checkout_defaults.py  test_confirmation.py  test_cost_backend.py  test_customer.py  test_dashboard.py  test_day_closing.py  test_efi_webhook.py  test_f0_robustness.py  test_f10_pos.py  test_f1_design_system.py  test_f3_catalog.py  test_f4_cart_checkout.py  test_f5_payment_confirmation.py  test_f8_gestor_pedidos.py  test_f9_kds.py  test_fiscal_contrib.py  test_fulfillment_handlers.py  test_identification.py  test_inventory_contrib.py  test_inventory_handlers.py  test_notification_email.py  test_notification_flow.py  test_notification_handlers.py  test_notifications.py  test_payment_contrib.py  test_payment_handlers.py  test_pricing_cascade.py  test_pricing_contrib.py  test_production_quick.py  test_promotions.py  test_returns_contrib.py  test_stock_contrib.py  test_stock_handlers.py  test_storefront_api.py  test_storefront_flow.py  test_stripe_webhook.py  (+1 more)
shopman-core/customers/: customers_test_settings.py  customers_test_urls.py  pyproject.toml
shopman-core/gating/: conftest.py  gating_test_settings.py  gating_test_urls.py  pyproject.toml
(+3525 files in other folders)
