[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-shopman"
version = "0.1.0"
description = "Django Shopman — omnichannel commerce framework for Django"
license = "MIT"
authors = [
    {name = "Pablo Valentini", email = "pablondrina@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<6.1",
    "djangorestframework>=3.17,<4.0",
    "django-filter>=25.2,<26.0",
    "drf-spectacular>=0.29,<1.0",
    "shopman-utils>=0.3.0",
    "shopman-refs>=0.1.0",
    "shopman-orderman>=0.1.0",
    "shopman-stockman>=0.3.0",
    "shopman-craftsman>=0.3.0",
    "shopman-offerman>=0.3.0",
    "shopman-guestman>=0.1.0",
    "shopman-doorman>=0.1.0",
    "shopman-payman>=0.1.0",
    "django-ratelimit>=4.1,<5.0",
    "django-csp>=4.0,<5.0",
    "django-eventstream>=5.3,<6.0",
    "django-import-export>=4.4,<5.0",
    "django-unfold>=0.92,<0.93",
    "daphne>=4.2,<5.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0",
    "redis>=5.1,<8.0",
    "qrcode[pil]>=7.4,<8.0",
    "whitenoise>=6.11,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-timeout>=2.3,<3.0",
    "pytest-cov",
    "ruff>=0.15,<1.0",
    "locust>=2.24,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shopman*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
testpaths = ["shopman/shop/tests"]

[tool.coverage.run]
source = ["shopman"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*_test_settings*",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long — handled by line-length setting
    "E402",   # module-level import not at top — intentional lazy imports in adapters
    "B008",   # function call in default argument — common Django pattern
]
